--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Radio Online - Radio Browser"
   />
     <title>Radio Browser</title>
   </head>
